2006-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-send-command): Don't wait for the command
	to terminate.  Don't fiddle with compilation-parsing-end.

2006-08-28  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/checkdoc.el (checkdoc-file-comments-engine):
	Insert commentary after first line summary.

	* woman.el (woman-follow): New function, based on `man-follow'.
	(woman-mode-map): Use it.

	* ibuffer.el (ibuffer-do-sort-by-recency): Perform full update
	since ibuffer-do-sort-by-recency does not define a sorter.

2006-08-28  Kim F. Storm  <storm@cua.dk>

	* find-dired.el	(find-dired): Use shell-quote-argument to properly
	escape ( and ) args.  Also use it on {} and ; args in default
	value of find-ls-option string.
	(find-grep-dired): Use shell-quote-argument on {} and ; args.

2006-08-27  Michael Olson  <mwolson@gnu.org>

	* emacs-lisp/tq.el: Small grammar fix in comments.
	(tq-enqueue): Check for existence of queue rather than the
	head queue item's question, which was a no-op.
	(tq-filter, tq-process-buffer): Make sure the process buffer
	exists before making it the current buffer.

2006-08-27  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-apple-event-map): Rename hicommand to hi-command.
	(mac-dnd-drop-data): Apply 2006-08-22 change for x-dnd-drop-data.
	(special-event-map): Apply 2006-08-16 change for x-win.el.

2006-08-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-send-receive): Wait in the
	process's buffer so as to check the right buffer-local variables.

2006-08-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/checkdoc.el: Remove * in defcustoms.
	(defgroup checkdoc): Move to beginning.

	* progmodes/python.el (python-preoutput-skip-next-prompt): New var.
	(python-preoutput-continuation): Remove.
	(python-preoutput-filter): Simplify correspondingly.
	Remove handling of _emacs_ok.  Make sure we skip _emacs_out's prompts.